--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 							<h3><span>Java Full Stack Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-instagram2"></i></a></li>
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
+									<!-- <li><a href="#"><i class="icon-instagram2"></i></a></li>
+									<li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/rajkumarkilari20"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="mailto:rajkumar2706k@gmail.com"><i class="icon-email"></i></a></li>
 								</ul>
