--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<!-- <li><a href="#"><i class="icon-instagram2"></i></a></li>
 									<li><a href="#"><i class="icon-facebook2"></i></a></li> -->
 									<li><a href="https://www.linkedin.com/in/rajkumarkilari20"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="mailto:rajkumar2706k@gmail.com"><i class="icon-email"></i></a></li>
+									<li><a href="mailto:rajkumar2706k@gmail.com"><i class="icon-envelope2"></i></a></li>
 								</ul>
 							</p>
 						</div>
