--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Have a project to discuss?</h2>
 					<!-- <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p> -->
-					<p><a href="#" class="btn btn-default btn-lg">Contact Me</a></p>
+					<p><a href="#" class="btn btn-default btn-lg">Reach us</a></p>
 					<ul class="fh5co-social-icons">
 						<li><a href="#"><i class="icon-twitter2"></i></a></li>
 						<li><a href="#"><i class="icon-facebook3"></i></a></li>
