--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>With over 6 years of experience in the Software Development Lifecycle (SDLC), I have established a solid foundation in both backend and frontend technologies, positioning myself as a proficient Full Stack Developer. My experience spans Analysis, Design, Implementation, Testing, and Deployment of Object-Oriented, Client-Server, Web-Based, Distributed, and Enterprise Applications. I specialize in Java/J2EE technologies, utilizing Java, Servlets, JSP, JDBC, EJB, Spring MVC, and Hibernate for backend development, alongside robust database management with Oracle, SQL Server, and DB2.</p>
+					<p>With over 8 years of experience in the Software Development Lifecycle (SDLC), I have established a solid foundation in both backend and frontend technologies, positioning myself as a proficient Full Stack Developer. My experience spans Analysis, Design, Implementation, Testing, and Deployment of Object-Oriented, Client-Server, Web-Based, Distributed, and Enterprise Applications. I specialize in Java/J2EE technologies, utilizing Java, Servlets, JSP, JDBC, EJB, Spring MVC, and Hibernate for backend development, alongside robust database management with Oracle, SQL Server, and DB2.</p>
 					<p>On the frontend, I excel in creating dynamic and responsive user interfaces using HTML5, CSS3, JavaScript, JQuery, and AngularJS. My expertise includes working with frameworks such as Spring and ORM tools like Hibernate, as well as experience in service-oriented architecture (SOA), web services, XML, SOAP, and WSDL. I am well-versed in Test-Driven Development (TDD) and have strong experience with version control systems like SVN, CVS, and ClearCase. My ability to work across various platforms, coupled with strong analytical skills, problem-solving abilities, and effective communication, enhances my capabilities as a Full Stack Developer.</p>
 					<p>
 						<ul class="fh5co-social-icons">
@@ -136,11 +136,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior java Developer</h3>
-									<span class="company">Company Name - 2023 - Current</span>
+									<h3 class="timeline-title">Senior java Full Stack Developer</h3>
+									<span class="company">Zoetis Inc - 2023 - Current</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -148,11 +148,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">java/j2ee Developer</h3>
-									<span class="company">Company Name - 20xx - 2023</span>
+									<h3 class="timeline-title">Full Stack Java Developer</h3>
+									<span class="company">Johnson & Johnson - April 2021 - March 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -160,11 +160,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Java developer</h3>
-									<span class="company">Company Name - 20xx - 20xx</span>
+									<h3 class="timeline-title">Full Stack Java developer</h3>
+									<span class="company">Pinnacle Financial Partners - November 2019 - April 2021</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
 								</div>
 							</div>
 						</li>
@@ -172,11 +172,23 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Java developer</h3>
-									<span class="company">Company Name - 20xx - 20xx</span>
+									<h3 class="timeline-title"> Full Stack Java developer</h3>
+									<span class="company">Giant Eagle - June 2017 - November 2019</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p></p>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title"> Java/J2EE developer</h3>
+									<span class="company">Aspire Systems - May 2016 to June 2017</span>
+								</div>
+								<div class="timeline-body">
+									<p></p>
 								</div>
 							</div>
 						</li>
