--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Full Stack Java Developer</h3>
-									<span class="company">Johnson & Johnson - April 2021 - March 2023</span>
+									<span class="company">PharmaACE - April 2021 - March 2023</span>
 								</div>
 								<div class="timeline-body">
 									<p></p>
@@ -172,7 +172,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title"> Full Stack Java developer</h3>
+									<h3 class="timeline-title"> Software Developer</h3>
 									<span class="company">Giant Eagle - June 2017 - November 2019</span>
 								</div>
 								<div class="timeline-body">
@@ -185,7 +185,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title"> Java/J2EE developer</h3>
+									<h3 class="timeline-title">Associate Software developer</h3>
 									<span class="company">Aspire Systems - May 2016 to June 2017</span>
 								</div>
 								<div class="timeline-body">
